objects/LLC_BI__AccountDocument__c.object
<CustomObject>
    <description>The AccountDocument Object stores information associated to the placeholders for documents in the Relationship Document Manager.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>This field is optional and is automatically populated.  This is a master-detail lookup that associates the correct relationship to the Account Document placeholder in the Relationship Document Manager.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountDocuments</relationshipLabel>
        <relationshipName>AccountDocuments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length. This field works in tandem with the newer Placeholder Approval Roles field, which can accept more characters.</description>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to approve the document. If left blank all roles can approve the document.</inlineHelpText>
        <label>Approval Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Esign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. This checkbox, when set to true, can be used to tell a downstream process that this e-signature ready placeholder should automatically appear in Customer Portal once available, rather than requiring a Document Manager user to manually trigger this process.</description>
        <label>Auto E-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Store_Index__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field populates automatically and associates placeholder records and document store records. It is where Notes and Attachments and Content are stored.</description>
        <label>Document Store Index</label>
        <referenceTo>LLC_BI__Document_Store_Index__c</referenceTo>
        <relationshipLabel>Account Documents</relationshipLabel>
        <relationshipName>AccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Download_As_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It should be marked to true if a compatible file should be downloaded as a PDF.</description>
        <inlineHelpText>Field should be marked to true if a compatible file should be downloaded as a PDF.</inlineHelpText>
        <label>Download As PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_File__c</fullName>
        <description>This field is optional and is automatically populated. This field is true if the placeholder currently has a document uploaded to it.</description>
        <formula>IF(ISBLANK(LLC_BI__Document_Store_Index__c) &amp;&amp; ISBLANK(LLC_BI__attachmentId__c),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used internally. This is the parent placeholder for archived placeholders</description>
        <label>Parent</label>
        <referenceTo>LLC_BI__AccountDocument__c</referenceTo>
        <relationshipLabel>AccountDocuments</relationshipLabel>
        <relationshipName>children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Groups__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the public groups added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on public groups. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Profiles to determine which users can access a document.</description>
        <label>Placeholder Viewer Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Profiles__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the user profiles added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on profiles. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Groups to determine which users can access a document.</description>
        <label>Placeholder Viewer Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Description__c</fullName>
        <description>This field is optional. This is the document description that will be displayed to Customer Portal users.</description>
        <label>Portal Doc Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Name__c</fullName>
        <description>This field is optional. This is the document name that will be displayed to Customer Portal users.</description>
        <label>Portal Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, this document will be displayed in Customer Portal.</description>
        <label>Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Date__c</fullName>
        <description>This field is optional and automatically populates when a Customer Portal document is rejected. This field stores the most recent date that the Customer Portal-originated document was rejected.</description>
        <label>Portal Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Rejection_Reason__c</fullName>
        <description>This field is optional. This is the explanation text that will be displayed to Customer Portal users when a document is rejected.</description>
        <label>Portal Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Wrong File</fullName>
                </value>
                <value>
                    <fullName>Unreadable</fullName>
                </value>
                <value>
                    <fullName>Out of Date</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Upload_Date__c</fullName>
        <description>This field is optional and is automatically populated. This field stores the date that a user uploads a document to Customer Portal for the placeholder.</description>
        <label>Portal Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Uploaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and shows, in Document Manager, which user uploaded the file via Customer Portal.</description>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UploadedAccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view the document preview and download the document. If left blank, all roles can view and download the document. This field is limited to 255 characters in length. This field is still respected, but users should start using the newer Placeholder Viewer Roles field, which can accept more characters.</description>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to view the document. If blank all roles can view the document.</inlineHelpText>
        <label>Viewer Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__approvalDate__c</fullName>
        <description>This field is optional and only used in classic Doc Man. It is a date/time stamp that lists the date/time the document in classic Relationship Document Manager was approved.</description>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__approvedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and only used in classic Doc Man. It is a lookup to the user who approved this document in classic Relationship Document Manager.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__attachmentId__c</fullName>
        <description>This field holds the ID of the attachment that is currently associated with this placeholder. This field populates automatically when an attachment is uploaded to a placeholder.</description>
        <label>Current Attachment Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__comments__c</fullName>
        <description>This field retains the most recent comment on a placeholder in classic Document Manager. This field is not used in Document Manager.</description>
        <label>Comments</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__date__c</fullName>
        <description>This field is optional. The user can manually set this date on the AccountDocument placeholder.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is automatically populated. It is a lookup to which Relationship Document Manager the placeholder is located on.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>AccountDocuments</relationshipLabel>
        <relationshipName>AccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. It is only used in classic Doc Man, but is populated for Document Manager as well. It is a lookup to which Tab on a classic Document Manager a placeholder is found on.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>AccountDocuments</relationshipLabel>
        <relationshipName>AccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required. In the Document Manager Expanded View, this field displays as Category. When in use, a user must populate it for the category picklist to appear in Document Manager. This field is equivalent to a category name for groups of placeholder records.</description>
        <label>DocType</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>AccountDocuments</relationshipLabel>
        <relationshipName>AccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__exceptionDate__c</fullName>
        <description>This field is optional. It is a date field used to specify a date at which a document has been or will be placed in Exception status. If the Exception Date is in the future, when that date is reached the status will automatically change to Exception.</description>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__fileSize__c</fullName>
        <description>This field is optional and automatically populates when a file is uploaded. This field displays the file size of the uploaded file on the placeholder.</description>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__helpText__c</fullName>
        <description>This field is optional and provides help text for an AccountDocument placeholder.</description>
        <label>Help Text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__mimeType__c</fullName>
        <description>This field is optional and automatically populates when a file is uploaded. This field records the MIME type (file extension) of the file uploaded to a placeholder.</description>
        <label>Mime Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ownerObjectId__c</fullName>
        <description>This field is optional and only applies to classic Document Manager. This field can be used to define the ID of the user who owns the placeholder.</description>
        <label>Owner Object Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__owner__c</fullName>
        <description>This field is optional. It is a picklist with roles associated to those users within nCino who may be responsible for that document placeholder file.</description>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Lender/Admin</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__priority__c</fullName>
        <description>This field is optional. This picklist shows the priority of a specific placeholder. It can have values such as Critical, High, Medium, Low, or None.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewDate__c</fullName>
        <description>This field is optional and represents the date when a document was reviewed by a user. This field does not auto-populate when a user changes the Status field to Reviewed.</description>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewStatus__c</fullName>
        <description>This field is not required, but the user must populate it when in use. This field stores the status of a placeholder. A placeholder without an attachment can have a value of Open, Waived, or Exception. When a file is uploaded, it can have a value of Approved, Exception, Reviewed or Waived. A user can change these status values depending on their permissions.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>In-File</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__reviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and displays the user who reviewed the document with their role.</description>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountDocuments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__sortOrder__c</fullName>
        <description>This field is not currently used.</description>
        <label>Sort Order</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__version__c</fullName>
        <description>This field is not currently used.</description>
        <label>Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDOC__Closing_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is automatically populated. It is a lookup to the Closing Checklist record that was used to create the placeholder record.</description>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipLabel>AccountDocuments</relationshipLabel>
        <relationshipName>AccountDocuments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__Created_By_Closing_Checklist_Id__c</fullName>
        <description>This field provides the ID of the closing checklist that created this AccountDocument record. This field automatically generates.</description>
        <label>Created_By_Closing_Checklist_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Description__c</fullName>
        <description>This field is optional and allows the user to provide a description of the placeholder.</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__HasBeenWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field auto-populates when a placeholder&apos;s status has been changed to waived by the system.</description>
        <label>HasBeenWaived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Staged__c</fullName>
        <description>This field is optional and is automatically populated. Formula field to determine if document is in staging.</description>
        <formula>ISBLANK(LLC_BI__docType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field works in tandem with the older Approval Roles field, which is limited to fewer characters.</description>
        <inlineHelpText>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document.</inlineHelpText>
        <label>Placeholder Approval Roles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view the document preview and download the document. If left blank, all roles can view and download the document. This field works in tandem with the older Viewer Roles field, which is limited to fewer characters.</description>
        <label>Placeholder Viewer Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Portal_Rejection_Comment__c</fullName>
        <label>Portal Rejection Comment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Portal_Rejection_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>The document you provided is missing a required signature. Please sign this document and upload again.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDOC__Trashed_Date__c</fullName>
        <description>This field is optional and auto-populates. This field stores the date and time that a document is trashed.</description>
        <label>Trashed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NDOC__Year__c</fullName>
        <description>This field is optional and stores the document year. This field gets set automatically when the date is set.</description>
        <label>Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__fileName__c</fullName>
        <description>This field is not currently used.</description>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__isTrash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and auto-populates. When a document is trashed, this field is checked and the document appears in the trash/archive area of Document Manager.</description>
        <label>isTrash</label>
        <type>Checkbox</type>
    </fields>
    <label>AccountDocument</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountDocuments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>